Fixes a display issue with visibility label within widget heading.

--- a/tool-ui/src/main/webapp/style/v3/widget.less
+++ b/tool-ui/src/main/webapp/style/v3/widget.less
@@ -33,6 +33,12 @@
   &:before {
     display: none !important;
   }
+
+  .visibilityLabel {
+    font-weight: normal;
+    text-shadow: none;
+    vertical-align: middle;
+  }
 }
 
 .widget-controls {
